GNOME Bugzilla – Bug 683061
io-png: fix some GCC warnings
Last modified: 2012-09-03 15:37:48 UTC
See patch
Created attachment 222978 [details] [review] patch
The following fix has been pushed: 3e0bf96 io-png: fix some GCC warnings
Created attachment 223337 [details] [review] io-png: fix some GCC warnings Set but unused variables, and various const/signedness fixes.