io-png: fix some GCC warnings

Set but unused variables, and various const/signedness fixes.

https://bugzilla.gnome.org/show_bug.cgi?id=683061